--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>StegoShark - About</title>
+  <title>StegoShark - About | Steganography Application</title>
   <link rel="icon" href="./images/main.ico" type="image/x-icon">
   <style>
     html {
