--- a/concepts.html
+++ b/concepts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>StegoShark - Concepts</title>
+  <title>StegoShark - Concepts | Steganography Application</title>
   <link rel="icon" href="./images/main.ico" type="image/x-icon">
   <style>
     html {
@@ -121,7 +121,6 @@
 </head>
 <body>
 
-  <!-- Navigation Bar -->
   <nav>
     <div class="nav-left">
       <img src="./images/main.png" alt="Logo">
@@ -135,7 +134,6 @@
     </div>
   </nav>
 
-  <!-- Main Content -->
   <div class="container">
     <h1>What is Steganography?</h1>
     <p>
