--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>StegoShark - Home</title>
-
+  <title>StegoShark - Home | Steganography Application</title>
+  <meta name="description" content="Free open-source tool for Image & Audio Steganography and digital signatures.">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./images/main.ico" type="image/x-icon">
 
   <style>
